--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "image-size": "^0.5.1",
     "inquirer": "^3.0.6",
     "loader-utils": "^1.1.0",
+    "memory-fs": "^0.4.1",
     "minimist": "^1.2.0",
     "morgan": "^1.8.1",
     "multi-progress": "^2.0.0",
@@ -71,7 +72,8 @@
     "webpack": "3.8.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1",
-    "ws": "^2.2.2"
+    "ws": "^2.2.2",
+    "xpipe": "^1.0.5"
   },
   "devDependencies": {
     "all-contributors-cli": "^4.5.1",
@@ -81,7 +83,7 @@
     "eslint-config-callstack-io": "^1.0.1",
     "flow-bin": "^0.57.2",
     "husky": "^0.13.3",
-    "jest": "^22.2.0",
+    "jest": "test",
     "lint-staged": "^3.4.0",
     "mkdirp": "^0.5.1",
     "react-native": "^0.51.0",
