Update Jest to 22

--- a/package.json
+++ b/package.json
@@ -77,13 +77,12 @@
   },
   "devDependencies": {
     "all-contributors-cli": "^4.5.1",
-    "babel-jest": "test",
     "babel-preset-react-native": "^2.0.0",
     "eslint": "^4.3.0",
     "eslint-config-callstack-io": "^1.0.1",
     "flow-bin": "^0.57.2",
     "husky": "^0.13.3",
-    "jest": "test",
+    "jest": "^22.2.0",
     "lint-staged": "^3.4.0",
     "mkdirp": "^0.5.1",
     "react-native": "^0.51.0",
